--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Dictionary</h1>
+    <!-- we don't need much here, JS will do the rest -->
     <div id="root"></div>
 </body>
 </html>
